--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,17 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="lavender">#715cf8</color>
+    <color name="gray">#A0A3B1</color>
+    <color name="edit_text_bg">#F2F3F7</color>
+
+    <color name="blue_med">#03A9F4</color>
+    <color name="light_blue_med">#89C4DA</color>
+
+    <color name="colorWhiteTextColor">#FFFFFF</color>
+    <color name="colorSearchIcon">#DBDBDB</color>
+    <color name="colorTextHint">#7B7B7B</color>
+
+    <color name="colorSearchBackground">#EAE7E7</color>
 </resources>
