--- a/app/src/main/res/layout/layout_quick_actions.xml
+++ b/app/src/main/res/layout/layout_quick_actions.xml
@@ -4,10 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_vertical"
-    android:background="@color/white"
+    android:background="@color/lavender"
+    android:layout_marginTop="@dimen/_20sdp"
     android:orientation="horizontal"
     android:padding="@dimen/_15sdp"
     app:layout_constraintBottom_toBottomOf="parent">
-
-
 </LinearLayout>
