--- a/app/src/main/res/layout/layout_quick_actions.xml
+++ b/app/src/main/res/layout/layout_quick_actions.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_vertical"
-    android:background="@color/lavender"
+    android:background="@color/white"
     android:layout_marginTop="@dimen/_20sdp"
     android:orientation="horizontal"
     android:padding="@dimen/_15sdp"
