--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -15,11 +15,14 @@
     <dimen name="_5sdp">5.00dp</dimen>
     <dimen name="_6sdp">6.00dp</dimen>
     <dimen name="_8sdp">8.00dp</dimen>
+    <dimen name="_9sdp">9.00dp</dimen>
+
     <dimen name="_10sdp">10.00dp</dimen>
     <dimen name="_10ssp">10.00sp</dimen>
     <dimen name="_12sdp">12.00dp</dimen>
     <dimen name="_13ssp">13.00sp</dimen>
     <dimen name="_16ssp">16.00sp</dimen>
+    <dimen name="_14ssp">14.00sp</dimen>
     <dimen name="_15sdp">15.00dp</dimen>
     <dimen name="_20sdp">20.00dp</dimen>
     <dimen name="_20ssp">20.00sp</dimen>
