Polls More changes

--- a/app/src/main/res/layout/activity_create_poll.xml
+++ b/app/src/main/res/layout/activity_create_poll.xml
@@ -74,7 +74,7 @@
                 android:includeFontPadding="false"
                 android:inputType="textMultiLine"
                 android:minHeight="@dimen/_100sdp"
-                android:textColor="@color/colorWhiteTextColor"
+                android:textColor="@color/black"
                 android:textColorHint="@color/colorTextHint"
                 android:textSize="@dimen/_20sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
