--- a/app/src/main/res/layout/activity_select_register.xml
+++ b/app/src/main/res/layout/activity_select_register.xml
@@ -30,7 +30,7 @@
         app:layout_constraintTop_toTopOf="@+id/imageView2" />
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/imageTravel"
         android:layout_width="117dp"
         android:layout_height="174dp"
         android:layout_marginTop="50dp"
@@ -41,7 +41,7 @@
         app:layout_constraintTop_toTopOf="@+id/tvChooseTopic" />
 
     <ImageView
-        android:id="@+id/imageView5"
+        android:id="@+id/imageScience"
         android:layout_width="121dp"
         android:layout_height="170dp"
         android:layout_marginTop="50dp"
@@ -51,25 +51,27 @@
         app:layout_constraintTop_toTopOf="@+id/tvChooseTopic" />
 
     <ImageView
-        android:id="@+id/imageView6"
+        android:id="@+id/imageFinance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="212dp"
+        android:layout_marginTop="20dp"
         android:src="@drawable/finance"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/imageView4"
-        app:layout_constraintTop_toTopOf="@+id/imageView4" />
+        app:layout_constraintStart_toStartOf="@+id/imageTravel"
+        app:layout_constraintTop_toBottomOf="@+id/imageTravel" />
 
     <ImageView
-        android:id="@+id/imageView7"
+        android:id="@+id/imageFashion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="266dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="4dp"
         android:src="@drawable/fashion"
-        app:layout_constraintEnd_toEndOf="@+id/imageView5"
-        app:layout_constraintTop_toTopOf="@+id/tvChooseTopic" />
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintHorizontal_bias="0.571"
+        app:layout_constraintStart_toStartOf="@+id/imageScience"
+        app:layout_constraintTop_toBottomOf="@+id/imageScience" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnFinish"
@@ -80,6 +82,6 @@
         app:layout_constraintEnd_toEndOf="@+id/tvChooseTopic"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/tvChooseTopic"
-        app:layout_constraintTop_toBottomOf="@+id/imageView7" />
+        app:layout_constraintTop_toBottomOf="@+id/imageFashion" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
